force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Column__c/agf__ADM_Column__c.object-meta.xml
<CustomObject>
    <description>Used to store meta data for a team&apos;s kanban board</description>
    <label>Column</label>
    <nameField>
        <label>Column Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Columns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>