force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Column__c/fields/agf__Max_Number_of_Records__c.field-meta.xml
<CustomField>
    <fullName>agf__Max_Number_of_Records__c</fullName>
    <label>Max # of Records</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>