force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Column__c/fields/agf__Parent_Column__c.field-meta.xml
<CustomField>
    <fullName>agf__Parent_Column__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Column</label>
    <referenceTo>agf__ADM_Column__c</referenceTo>
    <relationshipLabel>Columns</relationshipLabel>
    <relationshipName>Columns</relationshipName>
    <type>Lookup</type>
</CustomField>