force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Column__c/fields/agf__Position__c.field-meta.xml
<CustomField>
    <fullName>agf__Position__c</fullName>
    <label>Position</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>