force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Column__c/fields/agf__Pre_ParentId__c.field-meta.xml
<CustomField>
    <fullName>agf__Pre_ParentId__c</fullName>
    <label>Pre_ParentId</label>
    <length>250</length>
    <type>Text</type>
</CustomField>