force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Column__c/fields/agf__PreId__c.field-meta.xml
<CustomField>
    <fullName>agf__PreId__c</fullName>
    <label>PreId</label>
    <length>250</length>
    <type>Text</type>
</CustomField>